<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/str_configurations"
        android:textSize="30dp" />

    <LinearLayout
        android:id="@+id/configtypeselection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">




        <Button
            android:id="@+id/btn_actions"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:onClick="onSelectAction"
            android:text="@string/str_actions" />

    </LinearLayout>
    <!-- action config-->
    <LinearLayout
        android:id="@+id/layout_actionconfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/configtypeselection"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">
    <LinearLayout
        android:id="@+id/listlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/configlist"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/spinner_bg" />



        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="delete"
            android:text="@string/str_deletestr" />

        <Button
            android:id="@+id/button_additem"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="addItem"
            android:text="@string/str_addstr" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/repeatlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listlayout"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickRepeat"
            android:text="@string/str_repeatalways"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_addaction"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:onClick="addAction"
            android:text="@string/str_add_action" />
    </LinearLayout>

    <com.belyware.touchassist.DragListView
        android:id="@+id/actionlist"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/repeatlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/layout_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionlist"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_apply"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="apply"
            android:text="@string/str_applystr" />

    </LinearLayout>
    </LinearLayout>


</RelativeLayout>